--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,15 +32,162 @@
     </RelativeLayout>
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/flight"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_below="@+id/rl_box"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="25dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginLeft="25dp"
-        />
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="25dp">
 
+        <ImageView
+            android:layout_marginBottom="10dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_flight_24"/>
+
+        <TextView
+            android:text="FLIGHT"
+            android:layout_marginTop="23dp"
+            android:layout_gravity="center"
+            android:fontFamily="@font/poppins_semibold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/airport"
+        android:layout_below="@+id/rl_box"
+        android:layout_toEndOf="@+id/flight"
+        android:layout_margin="25dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp">
+
+        <ImageView
+            android:layout_marginBottom="10dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_connecting_airports_24"/>
+
+        <TextView
+            android:text="AIRPORT"
+            android:layout_marginTop="23dp"
+            android:layout_gravity="center"
+            android:fontFamily="@font/poppins_semibold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/payment"
+        android:layout_below="@+id/rl_box"
+        android:layout_toEndOf="@+id/airport"
+        android:layout_margin="25dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp">
+
+        <ImageView
+            android:layout_marginBottom="10dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_payment_24"/>
+
+        <TextView
+            android:text="PAYMENT"
+            android:layout_marginTop="23dp"
+            android:layout_gravity="center"
+            android:fontFamily="@font/poppins_semibold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/profile"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_below="@+id/flight"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="25dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"
+            android:src="@drawable/ic_baseline_person_24" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="23dp"
+            android:fontFamily="@font/poppins_semibold"
+            android:text="PROFILE" />
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/user"
+        android:layout_below="@+id/airport"
+        android:layout_toEndOf="@+id/flight"
+        android:layout_margin="25dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp">
+
+        <ImageView
+            android:layout_marginBottom="10dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_edit_24"/>
+
+        <TextView
+            android:text="EDIT USER"
+            android:layout_marginTop="23dp"
+            android:layout_gravity="center"
+            android:fontFamily="@font/poppins_semibold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/others"
+        android:layout_below="@+id/payment"
+        android:layout_toEndOf="@+id/user"
+        android:layout_margin="25dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp">
+
+        <ImageView
+            android:layout_marginBottom="10dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_more_horiz_24"/>
+
+        <TextView
+            android:text="MORE"
+            android:layout_marginTop="23dp"
+            android:layout_gravity="center"
+            android:fontFamily="@font/poppins_semibold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+
+    </androidx.cardview.widget.CardView>
 
 
 </RelativeLayout>
