--- a/app/src/main/res/layout/fragment_flight.xml
+++ b/app/src/main/res/layout/fragment_flight.xml
@@ -12,7 +12,7 @@
         android:id="@+id/tvBookingFragmentBooking"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/search_flight"
+        android:text="Create Flight"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -228,46 +228,6 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cvTotalPassenger"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                app:layout_constraintTop_toBottomOf="@+id/cvFragmentContainer"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="27dp"
-                android:layout_marginEnd="27dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="7dp">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:gravity="center"
-                    >
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/total_passenger"
-                        android:textSize="20sp"
-                        android:fontFamily="@font/poppins_semibold"
-                        android:textColor="@color/primary_font_color"
-                        android:textAlignment="center"/>
-                    <TextView
-                        android:id="@+id/tvSelectTotalPassenger"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Select Total Passenger"
-                        android:textAlignment="center"
-                        android:textSize="17sp"
-                        android:fontFamily="@font/poppins_medium"
-                        android:textColor="@color/primary_blue_1"/>
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
             <Button
                 android:id="@+id/btnSearchTicketFragmentBooking"
                 android:layout_width="220dp"
@@ -280,7 +240,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cvTotalPassenger" />
+                app:layout_constraintTop_toBottomOf="@+id/cvFragmentContainer" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
