--- a/app/src/main/res/layout/fragment_flight.xml
+++ b/app/src/main/res/layout/fragment_flight.xml
@@ -238,7 +238,7 @@
                         android:layout_height="wrap_content"
                         tools:layout="@layout/fragment_select_one_way" />
                     <ImageView
-                        android:layout_marginTop="13dp"
+                        android:layout_marginTop="18dp"
                         android:layout_below="@+id/fragmentContainerViewDepartureAndREturnDateFragmentBooking"
                         android:id="@+id/depatureIcon"
                         android:layout_marginStart="15dp"
@@ -250,7 +250,7 @@
                         android:id="@+id/txtDepature"
                         android:layout_toEndOf="@+id/depatureIcon"
                         android:layout_below="@+id/fragmentContainerViewDepartureAndREturnDateFragmentBooking"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="15dp"
                         android:layout_marginStart="10dp"
                         android:textColor="@color/primary_font_color"
                         android:text="@string/depature_time"
@@ -264,13 +264,13 @@
                         android:layout_below="@+id/fragmentContainerViewDepartureAndREturnDateFragmentBooking"
                         android:layout_toEndOf="@+id/txtDepature"
                         android:layout_marginStart="10dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="15dp"
                         android:fontFamily="@font/poppins_semibold"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
                     <ImageView
                         android:id="@+id/iconTimeDepature"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="15dp"
                         android:layout_marginStart="7dp"
                         android:layout_below="@+id/fragmentContainerViewDepartureAndREturnDateFragmentBooking"
                         android:layout_width="wrap_content"
@@ -325,7 +325,7 @@
                         android:fontFamily="@font/poppins_semibold"
                         android:text="Select Class"
                         android:layout_marginStart="20dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="15dp"
                         android:layout_toEndOf="@+id/iconTimeDepature"
                         android:layout_below="@+id/fragmentContainerViewDepartureAndREturnDateFragmentBooking"
                         android:layout_width="wrap_content"
@@ -364,7 +364,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/custom_button"
-                android:text="CREATE"
+                android:text="@string/create"
                 android:textAllCaps="false"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
