--- a/app/src/main/res/layout/fragment_flight.xml
+++ b/app/src/main/res/layout/fragment_flight.xml
@@ -23,7 +23,7 @@
         android:id="@+id/tvDepartureFlightFragmentShowTicket"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/create_ticket"
+        android:text="@string/create_flight"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
