--- a/app/src/main/res/layout/fragment_detail_flight.xml
+++ b/app/src/main/res/layout/fragment_detail_flight.xml
@@ -294,8 +294,38 @@
                 android:layout_marginTop="9dp"
                 android:layout_toEndOf="@+id/txtDepatureTime"
                 android:src="@drawable/ic_baseline_access_time_24" />
+            <TextView
+                android:id="@+id/txt_selectClass"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="7dp"
+                android:layout_below="@+id/txtArrivalTime"
+                android:layout_toEndOf="@+id/arrivalIcon"
+                android:fontFamily="@font/poppins_semibold"
+                android:text="Select Class"
+                android:textColor="@color/primary_font_color" />
 
-
+            <Spinner
+                android:id="@+id/spinnerClass"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/txtArrivalTime"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="7dp"
+                android:layout_toEndOf="@id/txt_selectClass"
+                android:entries="@array/classTypeId"
+                />
+            <TextView
+                android:textSize="10sp"
+                android:text="Note: 1 = Business 2 = Economy"
+                android:layout_marginTop="5dp"
+                android:layout_toEndOf="@+id/spinnerClass"
+                android:layout_below="@+id/txtArrivalTime"
+                android:textColor="@color/primary_font_color"
+                android:fontFamily="@font/poppins"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
         </RelativeLayout>
 
